Applied bp code style guidelines.